[package]
name = "fracture"
version = "0.1.0"
edition = "2024"
authors = ["April <april@aprl.cat>"]
repository = "https://github.com/aprlcat/fracture"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"

[dependencies.winapi]
version = "0.3.9"
features = [
    "consoleapi",
    "errhandlingapi", 
    "fileapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "shlobj",
    "synchapi",
    "wincon",
    "winerror",
    "winnt",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true